Cache Shopware versions locally instead of fetching from external API (#715)
